<resources>
    <string name="app_name">Forecast MVVM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="current_weather">Current Weather</string>
    <string name="location">Location</string>
    <string name="weather_status">Weather Status</string>
</resources>