<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.diangca.ebrahim.forecastmvvm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/swipe_anim"
            app:exitAnim="@anim/swipe_anim"
            app:popEnterAnim="@anim/swipe_anim"
            app:popExitAnim="@anim/swipe_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.diangca.ebrahim.forecastmvvm.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/swipe_anim"
            app:exitAnim="@anim/swipe_anim"
            app:popEnterAnim="@anim/swipe_anim"
            app:popExitAnim="@anim/swipe_anim" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/swipe_anim"
            app:exitAnim="@anim/swipe_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.diangca.ebrahim.forecastmvvm.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/swipe_anim"
            app:exitAnim="@anim/swipe_anim" />
    </fragment>
</navigation>